k8s/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ingress
spec:
  rules:
    - host: atlas.example.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atlas-portal
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: orion-api
                port:
                  number: 8000
